--- a/modules/evidences/client/views/edit-evidence.client.view.html
+++ b/modules/evidences/client/views/edit-evidence.client.view.html
@@ -7,14 +7,14 @@
       <fieldset>
         <div class="form-group" show-errors>
           <label for="title">Title</label>
-          <input name="title" type="text" ng-model="evidence.title" id="title" class="form-control" placeholder="Title" required>
+          <input name="title" type="text" ng-model="evidence.title" id="title" class="form-control" placeholder="" required>
           <div ng-messages="evidenceForm.title.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Evidence title is required.</p>
           </div>
         </div>
         <div class="form-group">
           <label for="content">Details</label>
-          <textarea name="content" ng-model="evidence.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          <textarea name="content" ng-model="evidence.content" id="content" class="form-control" cols="30" rows="10" placeholder=""></textarea>
         </div>
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
