--- a/modules/things/client/views/create-thing.client.view.html
+++ b/modules/things/client/views/create-thing.client.view.html
@@ -1,15 +1,15 @@
-<section ng-controller="PropositionsController">
+<section ng-controller="ThingsController">
   <div class="page-header">
-    <h1>New Proposition</h1>
+    <h1>New Thing</h1>
   </div>
   <div class="col-md-12">
-    <form name="propForm" class="form-horizontal" ng-submit="create(propForm.$valid)" novalidate>
+    <form name="thingForm" class="form-horizontal" ng-submit="create(thingForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
           <label for="title">Title</label>
           <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="propForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Proposition title is required.</p>
+          <div ng-messages="thingForm.title.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Thing title is required.</p>
           </div>
         </div>
         <div class="form-group">
