--- a/modules/things/client/views/edit-thing.client.view.html
+++ b/modules/things/client/views/edit-thing.client.view.html
@@ -1,20 +1,20 @@
-<section ng-controller="PropositionsController" ng-init="findOne()">
+<section ng-controller="ThingsController" ng-init="findOne()">
   <div class="page-header">
-    <h1>Edit Proposition</h1>
+    <h1>Edit Thing</h1>
   </div>
   <div class="col-md-12">
-    <form name="propForm" class="form-horizontal" ng-submit="update(propForm.$valid)" novalidate>
+    <form name="thingForm" class="form-horizontal" ng-submit="update(thingForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
           <label for="title">Title</label>
-          <input name="title" type="text" ng-model="prop.title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="propForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Proposition title is required.</p>
+          <input name="title" type="text" ng-model="thing.title" id="title" class="form-control" placeholder="Title" required>
+          <div ng-messages="thingForm.title.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Thing title is required.</p>
           </div>
         </div>
         <div class="form-group">
           <label for="content">Content</label>
-          <textarea name="content" ng-model="prop.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          <textarea name="content" ng-model="thing.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
         </div>
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
