--- a/modules/things/client/views/list-thing.client.view.html
+++ b/modules/things/client/views/list-thing.client.view.html
@@ -1,20 +1,20 @@
-<section ng-controller="PropositionsController" ng-init="find()">
+<section ng-controller="ThingsController" ng-init="find()">
   <div class="page-header">
-    <h1>Propositions</h1>
+    <h1>Things</h1>
   </div>
   <div class="list-group">
-    <a ng-repeat="prop in props" ui-sref="requirements.propositionsview({propId: prop._id})" class="list-group-item">
+    <a ng-repeat="thing in things" ui-sref="things.view({thingId: thing._id})" class="list-group-item">
       <small class="list-group-item-text">
         Posted on
-        <span ng-bind="prop.created | date:'mediumDate'"></span>
+        <span ng-bind="thing.created | date:'mediumDate'"></span>
         by
-        <span ng-bind="prop.user.displayName"></span>
+        <span ng-bind="thing.user.displayName"></span>
       </small>
-      <h4 class="list-group-item-heading" ng-bind="prop.title"></h4>
-      <p class="list-group-item-text" ng-bind="prop.content"></p>
+      <h4 class="list-group-item-heading" ng-bind="thing.title"></h4>
+      <p class="list-group-item-text" ng-bind="thing.content"></p>
     </a>
   </div>
-  <div class="alert alert-warning text-center" ng-if="props.$resolved && !props.length">
-    No propositions yet, why don't you <a ui-sref="requirements.propositionscreate">create one</a>?
+  <div class="alert alert-warning text-center" ng-if="things.$resolved && !things.length">
+    No things yet, why don't you <a ui-sref="things.create">create one</a>?
   </div>
 </section>
