--- a/modules/things/client/views/view-thing.client.view.html
+++ b/modules/things/client/views/view-thing.client.view.html
@@ -1,9 +1,9 @@
-<section ng-controller="PropositionsController" ng-init="findOne()">
+<section ng-controller="ThingsController" ng-init="findOne()">
   <div class="page-header">
-    <h1 ng-bind="prop.title"></h1>
+    <h1 ng-bind="thing.title"></h1>
   </div>
-  <div class="pull-right" ng-show="authentication.user._id == prop.user._id">
-    <a class="btn btn-primary" ui-sref="requirements.propositionsedit({propId: prop._id})">
+  <div class="pull-right" ng-show="authentication.user._id == thing.user._id">
+    <a class="btn btn-primary" ui-sref="things.edit({thingId: thing._id})">
       <i class="glyphicon glyphicon-edit"></i>
     </a>
     <a class="btn btn-primary" ng-click="remove();">
@@ -13,10 +13,10 @@
   <small>
     <em class="text-muted">
       Posted on
-      <span ng-bind="prop.created | date:'mediumDate'"></span>
+      <span ng-bind="thing.created | date:'mediumDate'"></span>
       by
-      <span ng-bind="prop.user.displayName"></span>
+      <span ng-bind="thing.user.displayName"></span>
     </em>
   </small>
-  <p class="lead" ng-bind="prop.content"></p>
+  <p class="lead" ng-bind="thing.content"></p>
 </section>
