--- a/modules/propositions/client/views/edit-proposition.client.view.html
+++ b/modules/propositions/client/views/edit-proposition.client.view.html
@@ -13,6 +13,14 @@
           </div>
         </div>
 
+	<div class="form-group" show-errors>
+	  <label for="thing">Things</label>
+	  <select name="thing" ng-model="selectedThing" ng-options="thing.title for thing in things" required> </select>
+	  <div ng-messages="propositionForm.things.$error" role="alert">
+      	    <p class="help-block error-text" ng-message="required">Thing is required.</p>
+          </div>
+	</div>
+
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
         </div>
