Linked proposition-creator and proposition togeter. Now we can creat a Proposition by selecting a Creator and a Thing.

--- a/modules/propositions/client/views/create-proposition.client.view.html
+++ b/modules/propositions/client/views/create-proposition.client.view.html
@@ -5,26 +5,31 @@
   <div class="col-md-12">
     <form name="propositionForm" class="form-horizontal" ng-submit="create(propositionForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" show-errors>
-          <label for="title">Title</label>
-          <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="propositionForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Proposition title is required.</p>
-        	</div>
 
 
-
-
-        </div>
 	<div class="form-group" show-errors>
 		<label for="things">Things</label>
 		  <select name="things" ng-model="selectedThing" ng-options="thing.title for thing in things" required> </select>
-		<div ng-messages="propositionForm.things.$error" role="alert">
-      	 	     <p class="help-block error-text" ng-message="required">Thing is required.</p>
-       		</div>
-
+		   <div ng-messages="propositionForm.things.$error" role="alert">
+         <p class="help-block error-text" ng-message="required">Thing is required.</p>
+       </div>
 	</div>
 
+  <div class="form-group" show-errors>
+		<label for="creators">Creators</label>
+		<select name="creators" ng-model="selectedCreator" ng-options="creator.title for creator in creators" required> </select>
+		<div ng-messages="propositionForm.creators.$error" role="alert">
+      <p class="help-block error-text" ng-message="required">Creator is required.</p>
+    </div>
+	</div>
+
+      <div class="form-group" show-errors>
+          <label for="title">Note</label>
+          <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
+          <div ng-messages="propositionForm.title.$error" role="alert">
+	        <p class="help-block error-text" ng-message="required">Proposition title is required.</p>
+  	  </div>
+  </div>
 
         <div class="form-group">
           <input type="submit" class="btn btn-default">
