--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -53,7 +53,7 @@
       </li>
     </ul>
   </nav>
-  <div>
+  <div ng-if="projectIsSet() && authentication.user">
     <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
       <ul class="nav navbar-nav" ng-if="menu.shouldRender(authentication.user);">
         <li ng-repeat="item in menu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user) && item.state != 'projects'" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
