--- a/modules/propositions/client/views/edit-proposition.client.view.html
+++ b/modules/propositions/client/views/edit-proposition.client.view.html
@@ -24,6 +24,23 @@
 	      </div>
 
         <div class="form-group" show-errors>
+	        <label for="evidence">Creator: </label> {{proposition.evidences.title}}<br/>
+	        <label for="evidence">Change to: </label>
+	        <select name="evidence" ng-model="selectedCreator" ng-options="evidence.title for evidence  in evidences" required> </select>
+	        <div ng-messages="propositionForm.creator.$error" role="alert">
+      	    <p class="help-block error-text" ng-message="required">Creator is required.</p>
+          </div>
+	</div>
+        <div class="form-group" show-errors>
+	        <label for="judgement">Creator: </label> {{proposition.judgements.title}}<br/>
+	        <label for="judgement">Change to: </label>
+	        <select name="judgements" ng-model="selectedJudgements" ng-options="judgement.title for judgement in Judgements" required> </select>
+	        <div ng-messages="propositionForm.judgements.$error" role="alert">
+      	    <p class="help-block error-text" ng-message="required">Creator is required.</p>
+          </div>
+	      </div>
+        
+        <div class="form-group" show-errors>
           <label for="title">Notes: </label> {{proposition.title}} <br/>
 	        <label for="thing">Change to: </label>
           <input name="title" type="text" ng-model="proposition.title" id="title" class="form-control" placeholder="Title" required>
