--- a/modules/propositions/client/views/view-proposition.client.view.html
+++ b/modules/propositions/client/views/view-proposition.client.view.html
@@ -19,6 +19,10 @@
     <a class="btn btn-primary" ui-sref="judgements.create({judgementId: judgements._id})">Add Judgement
       <i class="glyphicon glyphicon-edit"></i>
     </a>
+
+     <a class="btn btn-primary" ui-sref="evidences.create({evidenceId: evidence._id})">Add Judgement
+      <i class="glyphicon glyphicon-edit"></i>
+    </a>
     
     <em class="text-muted">
       Posted on
