--- a/modules/propositions/client/views/edit-proposition.client.view.html
+++ b/modules/propositions/client/views/edit-proposition.client.view.html
@@ -28,15 +28,15 @@
 	        <label for="evidence">Change to: </label>
 	        <select name="evidence" ng-model="selectedCreator" ng-options="evidence.title for evidence  in evidences" required> </select>
 	        <div ng-messages="propositionForm.creator.$error" role="alert">
-      	    <p class="help-block error-text" ng-message="required">Creator is required.</p>
+      	    <p class="help-block error-text" ng-message="required">Evidence is required.</p>
           </div>
 	</div>
         <div class="form-group" show-errors>
 	        <label for="judgement">Judgement: </label> {{proposition.judgements.title}}<br/>
 	        <label for="judgement">Change to: </label>
-	        <select name="judgements" ng-model="selectedJudgements" ng-options="judgement.title for judgement in Judgements" required> </select>
+	        <select name="judgements" ng-model="selectedJudgements" ng-options="judgement.title for judgement in judgements" > </select>
 	        <div ng-messages="propositionForm.judgements.$error" role="alert">
-      	    <p class="help-block error-text" ng-message="required">Creator is required.</p>
+      	    <p class="help-block error-text" ng-message="required">Judgement is required.</p>
           </div>
 	      </div>
         
