--- a/modules/propositions/client/views/view-proposition.client.view.html
+++ b/modules/propositions/client/views/view-proposition.client.view.html
@@ -9,20 +9,20 @@
   <div class="pull-right">
     <a class="btn btn-primary" ui-sref="propositions.edit({propositionId: proposition._id})">
       <i class="glyphicon glyphicon-edit"></i>
-    </a><br><br>
+    </a> &nbsp 
     <a class="btn btn-primary" ng-click="remove();">
       <i class="glyphicon glyphicon-trash"></i>
-    </a>
+    </a> &nbsp 
   </div>
- <br><br><br><br><br><br>
+  
     <div class="pull-right">
     <a class="btn btn-primary" ui-sref="judgements.create({judgementId: judgements._id})">Add Judgement
-    </a>
+    </a> &nbsp 
     </div>
-<br><br><br>
+  
     <div class="pull-right">
      <a class="btn btn-primary" ui-sref="evidences.create({evidenceId: evidence._id})">Add Evidence
-     </a>
+     </a> &nbsp 
     </div>
     
     <em class="text-muted">
