--- a/modules/propositions/client/views/edit-proposition.client.view.html
+++ b/modules/propositions/client/views/edit-proposition.client.view.html
@@ -15,9 +15,9 @@
         </div>
 
 	      <div class="form-group" show-errors>
-	        <label for="thing">Creator: </label> {{proposition.propcreator.title}}<br/>
-	        <label for="thing">Change to: </label>
-	        <select name="thing" ng-model="selectedCreator" ng-options="creator.title for creator in creators" required> </select>
+	        <label for="creator">Creator: </label> {{proposition.propcreator.title}}<br/>
+	        <label for="creator">Change to: </label>
+	        <select name="creator" ng-model="selectedCreator" ng-options="creator.title for creator in creators" required> </select>
 	        <div ng-messages="propositionForm.creator.$error" role="alert">
       	    <p class="help-block error-text" ng-message="required">Creator is required.</p>
           </div>
@@ -26,7 +26,7 @@
         <div class="form-group" show-errors>
 	        <label for="evidence">Evidence: </label> {{proposition.evidences.title}}<br/>
 	        <label for="evidence">Change to: </label>
-	        <select name="evidence" ng-model="selectedCreator" ng-options="evidence.title for evidence  in evidences" required> </select>
+	        <select name="evidence" ng-model="selectedEvidence" ng-options="evidence.title for evidence  in evidences" required> </select>
 	        <div ng-messages="propositionForm.creator.$error" role="alert">
       	    <p class="help-block error-text" ng-message="required">Evidence is required.</p>
           </div>
