--- a/modules/inferencerules/client/views/edit-inferencerule.client.view.html
+++ b/modules/inferencerules/client/views/edit-inferencerule.client.view.html
@@ -12,9 +12,27 @@
             <p class="help-block error-text" ng-message="required">Inference Rule title is required.</p>
           </div>
         </div>
+
+        <div class="form-group" show-errors>
+          <label for="premise">Premise</label>
+          <input name="premise" type="text" ng-model="inferencerule.premise" id="premise" class="form-control" placeholder="Premise" required>
+          <div ng-messages="inferenceruleForm.premise.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Premise is required.</p>
+          </div>
+        </div>
+
+        <div class="form-group" show-errors>
+          <label for="conclusion">Conclusion</label>
+          <input name="conclusion" type="text" ng-model="inferencerule.conclusion" id="conclusion" class="form-control" placeholder="Conclusion" required>
+          <div ng-messages="inferenceruleForm.conclusion.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Conclusion is required.</p>
+          </div>
+        </div>
+
+
         <div class="form-group">
-          <label for="content">Content</label>
-          <textarea name="content" ng-model="inferencerule.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          <label for="content">Note</label>
+          <textarea name="content" ng-model="inferencerule.content" id="content" class="form-control" cols="30" rows="10" placeholder="Put a note here"></textarea>
         </div>
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
